--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>super-over-sample</title>
+    <title>football gameplay</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,27 +29,27 @@
        <div>
         <article>
             <img src="./a.jpeg"  height=200 width=200 alt=""/>
-            <h4> TEAM-1</h4>
+            <h4> TEAM-1</h4><br>
             </article>
         <article>
             <img src="./ab.png" height=200 width=200 alt=""/>
-            <h4> TEAM-2</h4>
+            <h4> TEAM-2</h4><br>
         </article>
         <article>
             <img src="./ci.jpg" height=200 width=200  alt=""/>
-            <h4> TEAM-3</h4>
+            <h4> TEAM-3</h4><br>
         </article>
         <article>
             <img src="./is.jpg" height=200 width=200  alt=""/>
-            <h4> TEAM-4</h4>
+            <h4> TEAM-4</h4><br>
         </article>
         <article>
             <img src="./lp.jpg"  height=200 width=200 alt=""/>
-            <h4> TEAM-5</h4>
+            <h4> TEAM-5</h4><br>
         </article>
         <article>
             <img src="./mc.jpg"  height=200 width=200 alt=""/>
-            <h4> TEAM-6</h4>
+            <h4> TEAM-6</h4><br><br><br>
         </article>
        </div>
    </header>
@@ -60,28 +60,34 @@
                     <div class="flex set">
                         <div class="card1">
                             <img class="a" src="./a.jpeg" alt="TEAM1">
+                            <h4> TEAM-1</h4>
                         </div>
                         <h3>VS</h3>
                         <div class="card1 ">
                             <img class="ab" src="./ab.png" alt="TEAM2">
+                            <h4> TEAM-2</h4>
                         </div>
                     </div>
                     <div class="flex set">
                         <div class="card1">
                             <img class="ci" src="./ci.jpg" alt="TEAM3">
+                            <h4> TEAM-3</h4>
                         </div>
                         <h3>VS</h3>
                         <div class="card1 ">
                             <img class="is" src="./is.jpg" alt="TEAM4">
+                            <h4> TEAM-4</h4>
                         </div>
                      </div>
                      <div class="flex set">
                         <div class="card1">
                             <img class="lp" src="./lp.jpg" alt="TEAM5">
+                            <h4> TEAM-5</h4>
                         </div>
                         <h3>VS</h3>
                         <div class="card1 ">
                             <img class="mc" src="./mc.jpg" alt="TEAM6">
+                            <h4> TEAM-6</h4>
                         </div>
                      </div>
                 </div>
@@ -89,29 +95,35 @@
                     <div class="flex set">
                         <div class="card1">
                             <img class="ab" src="./ab.png" alt="TEAM2">
+                            <h4> TEAM-2</h4>
                         </div>
                         <h3>VS</h3>
                         <div class="card1">
                             <img class="lp" src="./lp.jpg" alt="TEAM5">
+                            <h4> TEAM-5</h4>
                         </div>
                     </div>
                     <div class="flex set">
                         <div class="card1">
                             <img class="ci" src="./ci.jpg" alt="TEAM3">
+                            <h4> TEAM-3</h4>
                         </div>
                         <h3>VS</h3>
                         <div class="card1">
                             <img class="mc" src="./mc.jpg" alt="TEAM6">
+                            <h4> TEAM-6</h4>
                         </div>
                     </div>
                 </div>
                 <div class="flex final">
                     <div class="card1">
                         <img class="lp" src="./lp.jpg" alt="TEAM5">
+                        <h4> TEAM-5</h4>
                     </div>
                     <h3>VS</h3>
                     <div class="card1">
                         <img class="mc" src="./mc.jpg" alt="TEAM6">
+                        <h4> TEAM-6</h4>
                     </div>
                 </div>
             </div>
